--- a/src/popup.html
+++ b/src/popup.html
@@ -1,16 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <Title> SLP MODS </Title>
+    <link rel="stylesheet" href="css/popup.css">
 </head>
 <body>
-    <button id="dark-mode-toggle" class="dark-mode-toggle">
-        <svg width="100%" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 496">
-        <path fill="currentColor" d="M8,256C8,393,119,504,256,504S504,393,504,256,393,8,256,8,8,119,8,256ZM256,440V72a184,184,0,0,1,0,368Z" transform="translate(-8 -8)"/>
-        </svg>
-    </button>
+    <a href="/src/Themes/themes.html">Themes</a>
+    <a href="/src/Mods/mods.html">Mods</a>
 </body>
 </html>
